plugins {
    id 'java'
    id 'me.champeau.jmh' version '0.6.8'
}

group 'io.github.leofuso'
version '1.0-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_19
targetCompatibility = JavaVersion.VERSION_19

repositories {
    mavenCentral()
}

compileJava {
    options.compilerArgs += ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
}

compileTestJava {
    options.compilerArgs += ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
}

compileJmhJava {
    options.compilerArgs += ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

jmh {
    iterations = 10
    benchmarkMode = ['avgt']
    fork = 2
    failOnError = true
    forceGC = false
    profilers = ['perfnorm']
    jvmArgsAppend = [
            '--enable-preview',
            '--add-modules', 'jdk.incubator.vector',
            //        '-XX:+UnlockDiagnosticVMOptions',
            //        '-XX:+PrintCompilation',
            //        '-XX:+PrintInlining',
            //        '-XX:+PrintAssembly'
            '-XX:UseSSE=0',
            '-XX:UseAVX=0'
    ]
    operationsPerInvocation = 10
    timeOnIteration = '1s'
    threads = 12
    timeUnit = 'ms'
    verbosity = 'NORMAL'
    warmup = '1s'
    warmupForks = 2
    warmupIterations = 2
    warmupMode = 'INDI'
}


jmhRunBytecodeGenerator {
    jvmArgs.addAll '--add-modules', 'jdk.incubator.vector'
}

test {
    jvmArgs += [
            '--enable-preview',
            '--add-modules', 'jdk.incubator.vector',
            '--enable-native-access', 'ALL-UNNAMED'
    ]

    systemProperty 'java.library.path', '/usr/local/lib'
    useJUnitPlatform()
}